# Geodesique

./: .gitignore  README.md  axonforge.json  benchmark_crg.py  plot_weights.py  pyproject.toml
ax_graphs/: AOL.json  CSHL.json  asd.json  completion?.json  concat.json  feedback1.json  tutorial1.json  tutorial2.json  tutorial3.json
ax_nodes/: activations.py  channel_concat.py  color_opponent.py  cortex.py  learning.py  learning2.py  learning3.py  learning4.py  learning5.py  learning_conv.py  lgn.py  matrix_concat.py  random_unit_vector.py  reconstruction.py  top_k.py  utilities.py  weight_activation_matmul.py
experiments/concat/: eval_concat_mnist.py
experiments/concat/r001_digits/: classification_report.txt  results.json  srl_weights.npy
experiments/experiments_crg/: eval_crg_mnist.py  train_crg_mnist.py
experiments/experiments_imdv/: eval_imdv_mnist.py  train_imdv_mnist.py
experiments/experiments_srl/: train_srl_mnist.py
experiments/feedback/: eval_feedback_mnist.py
notes/: GeodesicIMDVv2.md  ww1.md  ww2.md  ww5.md  ww6.md
notes/CRG/: ActivationThreshold.md  ContrastResidualGeodesic.md  LOOSparsityAndInactiveTemplates.md  MeanCenteringAndLayerCommunication.md  SignedResidualLearning.md  TemporalIntegration.md
notes/CSHL/: ContrastStructureHypothesisLearning.md  InhibitionAndLearningDecoupling.md  TopKAndLabelConcatenation.md  partial_correlations.md
notes/Feedback/: Thoughts1.md  Thoughts2.md
notes/PreviousImp/: ww3.md  ww4.md  ww5.md  ww6.md
notes/SRL/: CategoryAlignment.md  SRL_vs_CRG_and_ChannelConv.md  UniversalContrast.md
(+49 files in other folders)
