[project]
name = "geodesique"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "axonforge",
    "cupy-cuda13x>=14.0.1",
    "matplotlib>=3.10.8",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
axonforge = { path = "../MiniCortex", editable = true }

[tool.pyright]
extraPaths = ["../MiniCortex"]
